# python-sdk

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  SHARED-CONTRACT.md  _exports_a.txt  _exports_b.txt  _exports_c.txt  _exports_d.txt  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
docs/use-cases/: 01-realtime-agent-events.md  02-framework-integrations.md  03-live-dashboard-sse.md  04-distributed-tracing.md  05-error-webhooks.md  06-agent-to-agent-websockets.md  07-production-error-handling.md  README.md
examples/: .env.example  01_quickstart.py  02_agent_tracing.py  03_realtime_mqtt.py  03_realtime_sse.py  04_multi_agent.py  05_webhooks.py  06_async_client.py  07_langchain.py  08_error_handling.py  09_deepagents.py  10_stdlib_logging.py  11_loguru.py  12_structlog.py  13_print_capture.py  14_otel.py  README.md  config.py  pyproject.toml
scripts/: test-e2e.sh
spec/: openapi.json
src/axonpush/: __init__.py  _auth.py  _config.py  _http.py  _tracing.py  client.py  exceptions.py  models.py
src/axonpush/_internal/: transport.py
src/axonpush/_internal/api/: __init__.py
src/axonpush/_internal/api/api/api_keys/: api_key_controller_create_api_key.py  api_key_controller_list_api_keys.py  api_key_controller_revoke_api_key.py
src/axonpush/_internal/api/api/apps/: apps_controller_create_app.py  apps_controller_delete_app.py  apps_controller_edit_app.py  apps_controller_get_all_apps.py  apps_controller_get_app.py
src/axonpush/_internal/api/api/audit_logs/: audit_log_controller_list_audit_logs.py
src/axonpush/_internal/api/api/auth/: auth_controller_google_auth.py  auth_controller_refresh.py  auth_controller_setup_org.py  auth_controller_sign_in.py  auth_controller_sign_up.py  iot_credentials_controller_get_credentials.py
src/axonpush/_internal/api/api/billing/: billing_controller_create_checkout.py  billing_controller_get_plans.py  billing_controller_get_portal.py  billing_controller_get_usage.py  billing_controller_handle_webhook.py
src/axonpush/_internal/api/api/channels/: channel_controller_create_channel.py  channel_controller_delete_channel.py  channel_controller_get_channel.py  channel_controller_list_channels.py  channel_controller_update_channel.py
src/axonpush/_internal/api/api/default/: app_controller_get_hello.py
src/axonpush/_internal/api/api/environments/: environment_controller_create.py  environment_controller_list.py  environment_controller_promote.py  environment_controller_remove.py  environment_controller_update.py
src/axonpush/_internal/api/api/event/: event_controller_create_event.py  event_controller_list_events.py
src/axonpush/_internal/api/api/events/: events_search_controller_search.py
src/axonpush/_internal/api/api/feature_flags/: feature_flags_controller_me.py
src/axonpush/_internal/api/api/health/: health_controller_check.py
src/axonpush/_internal/api/api/organizations/: organization_controller_create_invitation.py  organization_controller_create_organization.py  (+7 more)
src/axonpush/_internal/api/models/: __init__.py  api_key_create_response_dto.py  api_key_create_response_dto_scopes_item.py  api_key_response_dto.py  api_key_response_dto_scopes_item.py  app_response_dto.py  audit_log_actor_dto.py  audit_log_list_meta_dto.py  audit_log_list_response_dto.py  audit_log_response_dto.py  audit_log_response_dto_metadata_type_0.py  auth_controller_google_auth_response_201.py  auth_tokens_response_dto.py  billing_checkout_request_dto.py  billing_checkout_request_dto_cadence.py  billing_checkout_request_dto_plan.py  billing_checkout_response_dto.py  billing_plans_response_dto.py  billing_portal_response_dto.py  billing_usage_response_dto.py  billing_usage_response_dto_subscription_status.py  billing_webhook_response_dto.py  channel_response_dto.py  create_api_key_dto.py  create_api_key_dto_scopes_item.py  create_app_dto.py  create_channel_dto.py  create_environment_dto.py  create_event_dto.py  create_event_dto_event_type.py  create_event_dto_metadata.py  create_event_dto_payload.py  create_invitation_dto.py  create_invitation_dto_desired_role.py  create_organization_dto.py  create_public_token_dto.py  create_release_dto.py  create_webhook_endpoint_dto.py  environment_controller_promote_response_201.py  environment_response_dto.py  (+58 more)
src/axonpush/integrations/: __init__.py  _otel_payload.py  _publisher.py  _utils.py  anthropic.py  crewai.py  deepagents.py  langchain.py  logging_handler.py  loguru.py  openai_agents.py  otel.py  print_capture.py  sentry.py  structlog.py
src/axonpush/models/: __init__.py  apps.py  channels.py  common.py  environments.py  events.py  traces.py  webhooks.py
src/axonpush/realtime/: __init__.py  credentials.py  mqtt.py  mqtt_async.py  sse.py  topics.py  websocket.py
src/axonpush/resources/: __init__.py  _base.py  api_keys.py  apps.py  channels.py  environments.py  events.py  events_query.py  organizations.py  traces.py  webhooks.py
tests/: _read_env.py  conftest.py  test_async.py  test_client.py  test_sse.py  test_websocket.py
tests/e2e/: conftest.py  test_apps.py  test_async.py  test_channels.py  test_events.py  test_sse.py  test_traces.py  test_webhooks.py  test_websocket.py
tests/e2e/integrations/: test_async_log_integrations.py  test_log_integrations.py
tests/realtime/: conftest.py  test_credentials.py  test_mqtt.py  test_mqtt_async.py  test_topics.py
tests/test_resources/: test_apps.py  test_channels.py  test_deepagents.py  test_events.py  test_traces.py  test_webhooks.py
tests/unit/: test_apps_resource.py  test_async_parity.py  test_channels_resource.py  test_client.py  test_events_resource.py  test_packaging.py  test_sentry_integration.py  test_sse.py  test_transport.py  test_transport_errors.py
tests/unit/integrations/: conftest.py  test_anthropic.py  test_async_paths.py  test_crewai.py  test_deepagents.py  test_langchain.py  test_logging_handler.py  test_loguru.py  test_openai_agents.py  test_otel.py  test_print_capture.py  test_publisher.py  test_structlog.py  test_utils.py
tools/: merge-exports.py  openapi-config.yaml  patch-spec.py
(+35 files in other folders)
